fix header-body gap and change titles and blocks color

--- a/src/assets/css/app.css
+++ b/src/assets/css/app.css
@@ -31,10 +31,9 @@ html {
     margin-bottom: 2.5rem;
 }
 .block-title .title {
-    color: #55b4b0;
+    color: #33cccc;
     font-family: 'Righteous', cursive !important;
-    font-size: 1.8rem !important;
-    font-weight: initial;
+    font-size: 2.2rem !important;
     text-transform: uppercase;
 }
 
@@ -120,4 +119,5 @@ html {
 .project-img {
     border-top: 1px solid #ccc;
     border-bottom: 1px solid #ccc;
+    cursor: pointer;
 }
